Set max perm size higher.